bug-fix extra space in code block

--- a/styles/global.css
+++ b/styles/global.css
@@ -97,8 +97,10 @@ html {
 }
 
 .prose pre code {
-  @apply text-gray-dark dark:text-gray-light;
+  @apply text-gray-dark dark:text-gray-light px-0;
 }
+
+
 
 .prose img {
   /* Don't apply styles to next/image */
